Lists todos in a console table

--- a/tasks.json
+++ b/tasks.json
@@ -1,5 +1,5 @@
 {
-  "serialId": 4,
+  "serialId": 5,
   "todos": [
     {
       "id": 1,
@@ -19,6 +19,11 @@
     {
       "id": 4,
       "description": "make four things",
+      "complete": false
+    },
+    {
+      "id": 5,
+      "description": "make five things",
       "complete": false
     }
   ]
