--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "## Skills",
   "main": "task.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test"
   },
   "repository": {
     "type": "git",
@@ -18,5 +18,9 @@
   "homepage": "https://github.com/jaycribas/command-line-todo-list#readme",
   "dependencies": {
     "console.table": "^0.8.0"
+  },
+  "devDependencies": {
+    "chai": "^4.1.0",
+    "mocha": "^3.4.2"
   }
 }
