Refactors code and tests

--- a/tasks.json
+++ b/tasks.json
@@ -1,17 +1,29 @@
 {
-  "serialId": 7,
+  "serialId": 8,
   "todos": [
     {
-      "id": 5,
-      "description": "Be yonce"
+      "ID": 1,
+      "Description": "Play ball"
     },
     {
-      "id": 6,
-      "description": "Be you"
+      "ID": 2,
+      "Description": "Make a thing"
     },
     {
-      "id": 7,
-      "description": "Go hunting"
+      "ID": 3,
+      "Description": "Be yonce"
+    },
+    {
+      "ID": 4,
+      "Description": "Be yourself"
+    },
+    {
+      "ID": 5,
+      "Description": "Stop it"
+    },
+    {
+      "ID": 6,
+      "Description": "Do a dance"
     }
   ]
 }
